--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>music player</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel="apple-touch-icon" href="/favicon.png" />
+	<meta name="theme-color" content="#f8f8ff" />
+	<meta
+		name="description"
+		content="A net-based music player"
+	/>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+
+	<title>music player</title>
 
 	<script type="module" src='/main.ts'></script>
 </head>
