--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="apple-touch-icon" href="/favicon.png" />
-	<meta name="theme-color" content="#f8f8ff" />
+	<meta name="theme-color" content="#fff" />
 	<meta
 		name="description"
 		content="A net-based music player"
 	/>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+	<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
 
 	<title>music player</title>
 
