--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,19 @@
 <head>
 	<meta charset='utf-8'>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel="apple-touch-icon" href="/favicon.png" />
+	<link rel='icon' type='image/png' href='/favicon.ico'>
+	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" type="image/png" href="/icons/apple-touch-icon.png" />
+	<link rel="mask-icon" href="/icons/safari-pinned-tab.svg" />
+
 	<meta name="theme-color" content="#fff" />
 	<meta
 		name="description"
-		content="A net-based music player"
+		content="A web-based music player"
 	/>
-
 	<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 	<title>music player</title>
 
